Verbatim copy of the simple templated website I know works with NGINX

--- a/myapp.ini
+++ b/myapp.ini
@@ -2,10 +2,10 @@
 module = wsgi:application
 
 master = true
-processes = 1
+processes = 5
 
 uid = ec2-user
-socket = /run/uwsgi/symple-app.sock
+socket = /run/uwsgi/myapp.sock
 chown-socket = ec2-user:nginx
 chmod-socket = 660
 vacuum = true
